--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,13 @@
 # runtime ledgers
 ledger/hash_registry.jsonl
 
+# --- Runtime / generated artifacts (do not commit) ---
+fix-settings.ps1
+ledger/hash_registry.jsonl
+ledger/hash_registry.csv
+ledger/anchors/
+ledger/enterprise_outbox/
+
+# Stamps / labels are generated outputs
+changes/**/stamp*.yaml
+changes/**/label_*.json
