CCBP bootstrap: contract index + governance kernel + CLP toolchain + validate lane

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,6 @@
+﻿# Generated outputs
+artifacts/
+dist/
 
-# runtime ledgers
-ledger/hash_registry.jsonl
-
-# --- Runtime / generated artifacts (do not commit) ---
-fix-settings.ps1
-ledger/hash_registry.jsonl
-ledger/hash_registry.csv
-ledger/anchors/
-ledger/enterprise_outbox/
-
-# Stamps / labels are generated outputs
-changes/**/stamp*.yaml
-changes/**/label_*.json
-# --- Runtime / generated artifacts (do not commit) ---
-fix-settings.ps1
-ledger/hash_registry.jsonl
-ledger/hash_registry.csv
-ledger/anchors/
-ledger/enterprise_outbox/
-
-# Stamps / labels are generated outputs
-changes/**/stamp*.yaml
-changes/**/label_*.json
+# Local runners (optional)
+run-ccbp-step.ps1
